[project]
name = "berliner-strassen"
version = "0.1.0"
description = "Berlin street-name storytelling and geospatial analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas<3.0.0",
    "plotly>=6.5.2",
    "shapely>=2.1.2",
]
